Added genres and platforms routes.
